# University_projects

./: README.md
NLP_ContentIntelligenceAgency_Phase2/: .gitignore  README.md  pyproject.toml
NLP_ContentIntelligenceAgency_Phase2/.github/: README.md  pipeline-final.ipynb  pipeline.py  requirements.txt
NLP_ContentIntelligenceAgency_Phase2/.github/workflows/: docker.yml  lint.yml  test.yml
NLP_ContentIntelligenceAgency_Phase2/FastApi_deploying/: docker-compose.yml  main.py  requirements.txt  streamlit_app.py
NLP_ContentIntelligenceAgency_Phase2/airflow/dags/: emotion_preprocessing_dag.py  text_preprocessing.py
NLP_ContentIntelligenceAgency_Phase2/api/: Dockerfile  FastAPI.py  locust.py  locust_logs.yaml  requirements.txt
NLP_ContentIntelligenceAgency_Phase2/azure_env/: README.md  conda.yaml  config.json  register_env.py
NLP_ContentIntelligenceAgency_Phase2/cloud_deployment/blue_green_deployment/: README.md  config.json  create_green_deployment.py  rollback_to_blue.py  score.py  switch_traffic_80_20.py  switch_traffic_to_green.py  test_request.py  uri_key.py
NLP_ContentIntelligenceAgency_Phase2/cloud_deployment/simple_deployment/: README.md  create_endpoint.py  get_logs.py  score.py  uri_key.py
NLP_ContentIntelligenceAgency_Phase2/data/: sample_transcript.csv  split_register.ipynb
NLP_ContentIntelligenceAgency_Phase2/data/upload_temp/: test.csv  val.csv
NLP_ContentIntelligenceAgency_Phase2/deploy_azure/: docker-compose.yml  main.py  streamlit_app.py
NLP_ContentIntelligenceAgency_Phase2/deploy_azure/yaml/: emotion-backend.yaml  emotion-frontend.yaml
NLP_ContentIntelligenceAgency_Phase2/docs/: .buildinfo  Presentation_NLP8.pptx  search.html
NLP_ContentIntelligenceAgency_Phase2/docs/_static/: documentation_options.js  pygments.css
NLP_ContentIntelligenceAgency_Phase2/docs/source/: conf.py
NLP_ContentIntelligenceAgency_Phase2/emotion_classification_api/: run.py  test_api.py
NLP_ContentIntelligenceAgency_Phase2/emotion_classification_api/utils/: __init__.py  logger_feedback.py
NLP_ContentIntelligenceAgency_Phase2/fastapi/: Dockerfile  requirements.txt
NLP_ContentIntelligenceAgency_Phase2/src/: .coverage  .flake8  .pre-commit-config.yaml  Predict.py  README.md  coverage.xml  log.txt  pyproject.toml  pytest.ini  requirements-dev.txt  tensorsss.ipynb
NLP_ContentIntelligenceAgency_Phase2/src/FastApi_deploying/: .dockerignore  Dockerfile  Dockerfile.streamlit  docker-compose.yml  main.py  requirements.txt  schemas.py  streamlit_app.py
NLP_ContentIntelligenceAgency_Phase2/src/azureml/: README.md  (+1 more)
(+233 files in other folders)
