[project]
name = "project-nlp8"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandruMic236535",email = "144055838+AlexandruMic236535@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "matplotlib (>=3.5.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow (==2.10.1)",
    "numpy (==1.26)",
    "pytest (>=8.3.5,<9.0.0)",
    "sphinx-rtd-theme (>=1.3.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "project_nlp8", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
pytest-cov = "^6.1.1"
sphinx = ">=4.0,<6.0"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
